--- a/otto_brown/quotes.html
+++ b/otto_brown/quotes.html
@@ -9,6 +9,9 @@
   </head>
   <body>
     <h1 class="heading"><span class="heading-span">Inspirational Quotes</span></h1>
+    <nav id="buttons">
+      <a class="links" href="index.html">Home</a><a class="links" href="about.html">About Me</a><a class="links" id="resume" href="Autumn_2017_Assembly_Schedule.pdf">Resumé</a>
+    </nav>
     <div>
       <p id="quoteDescription">Everybody has days when they need a boost. Often times, people lose sight of what really matters, and they get caught up thinking about small, material things that, in the long run, aren't really important. I think it's really important that people don't sweat the small stuff, but rather look at matters from a distance on occasion.
         In order to center myself when doing that, I often read quotes that I've collected over time. Whenever I see something that I think is inspirational, I write it down so that I can find it when I need to refocus. Below, I've shared a few quotes that I've found to be extremely helpful, especially through High School.
@@ -17,13 +20,21 @@
     </div>
 
     <div class="quotePicLeft">
-        <picture><img id="emerson" class="picLeft" src="emerson.jpg"></picture>
-      <div class="quoteTextRight">
-        <p>
-          “Our greatest glory is not in never falling, but in rising every time we fall.”
-        </p>
-      </div>
+        <img id="emerson" class="picLeft" src="assets/images/quotes/emerson.jpg">
+        <div class="textRight">
+          <p class="actualTextRight">
+            “Our greatest glory is not in never falling, but in rising every time we fall.” <br>  —Ralph Waldo Emerson
+          </p>
+        </div>
+    </div>
 
+    <div class="quotePicRight">
+        <img id="confucius" class="picRight" src="assets/images/quotes/confucius.jpg">
+        <div class="textLeft">
+          <p class="actualTextLeft">
+            “The superior man is modest in his speech but exceeds in his actions” <br> –Confucius
+          </p>
+        </div>
     </div>
 
     <footer>
