updated jan 30 11:30am

--- a/otto_brown/quotes.html
+++ b/otto_brown/quotes.html
@@ -37,6 +37,33 @@
         </div>
     </div>
 
+    <div class="quotePicLeft">
+        <img id="copernicus" class="picLeft" src="assets/images/quotes/copernicus.jpg">
+        <div class="textRight">
+          <p class="actualTextRight">
+            “To know that we know what we know, and to know that we do not know what we do not know, that is true knowledge.” <br>  –Copernicus
+          </p>
+        </div>
+    </div>
+
+    <div class="quotePicRight">
+        <img id="horace" class="picRight" src="assets/images/quotes/horace.jpg">
+        <div class="textLeft">
+          <p class="actualTextLeft">
+            “Carpe diem quam minimum credula postero” <br>  –Horace
+          </p>
+        </div>
+    </div>
+
+    <div class="quotePicLeft">
+        <img id="confucius2" class="picLeft" src="assets/images/quotes/confucius.jpg">
+        <div class="textRight">
+          <p class="actualTextRight">
+            “Act with kindness, but do not expect gratitude” <br>  –Confucius
+          </p>
+        </div>
+    </div>
+
     <footer>
       <p class="footerText" id="SJQuote">Your time is limited, so don't waste it living some else's life. Don't be trapped by dogma - which is living with the results of other people's thinking. Don't let the noise of others' opinions drown out your own inner voice. And most important, have the courage to follow your heart and intuition. —Steve Jobs</p>
       <hr></hr>
