--- a/otto_brown/index.html
+++ b/otto_brown/index.html
@@ -10,20 +10,19 @@
   <body>
     <h1 class="heading"><span class="heading-span">Otto Brown</span></h1>
     <nav id="buttons">
-      <a class="links" href="about.html">About Me</a><a class="links" id="resume" href="Autumn_2017_Assembly_Schedule.pdf">Resumé</a><a class="links" id="quotes" href="quotes.html">Inspirational Quotes</a>
+      <a class="links" href="index.html">Home</a><a class="links" href="about.html">About</a><a class="links" id="quotes" href="quotes.html">Quotes</a><a class="links" id="resume" href="Autumn_2017_Assembly_Schedule.pdf">Resumé</a>
     </nav>
 
     <picture><img alt="CoverPhoto" src="ottoEddy.jpg"></picture>
 
-    <section id="openingStatement">
-
+    <section>
     </section>
 
 
     <footer>
       <p class="footerText" id="SJQuote">Your time is limited, so don't waste it living some else's life. Don't be trapped by dogma - which is living with the results of other people's thinking. Don't let the noise of others' opinions drown out your own inner voice. And most important, have the courage to follow your heart and intuition. —Steve Jobs</p>
       <hr></hr>
-      <p class="footerText"> Otto Brown | otto@ottobob.com | Facebook, Linkedin: /otownb</p>
+      <p class="footerText"> Otto Brown | otto@ottobob.com | Linkedin: /otownb</p>
     </footer>
 
   </body>
