--- a/otto_brown/about.html
+++ b/otto_brown/about.html
@@ -3,10 +3,29 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
-    <title></title>
+    <title>About</title>
   </head>
   <body>
-      <h1 class="about">About This Page</h1>
-      <p>This page will hold information about me</p>
+    <h1 class="heading"><span class="heading-span">About</span></h1>
+    <nav id="buttons">
+      <a class="links" href="index.html">Home</a><a class="links" href="about.html">About</a><a class="links" id="quotes" href="quotes.html">Quotes</a><a class="links" id="resume" href="Autumn_2017_Assembly_Schedule.pdf">Resumé</a>
+    </nav>
+
+    <div class="pictureAndBio">
+        <img id="otto" class="picLeft" src="assets/images/about/otto.jpg">
+        <div class="bio">
+          <p class="bio">
+            Welcome to my website!  <br>  —Ralph Waldo Emerson
+          </p>
+        </div>
+    </div>
+
+    <footer>
+      <p class="footerText" id="SJQuote">Your time is limited, so don't waste it living some else's life. Don't be trapped by dogma - which is living with the results of other people's thinking. Don't let the noise of others' opinions drown out your own inner voice. And most important, have the courage to follow your heart and intuition. —Steve Jobs</p>
+      <hr></hr>
+      <p class="footerText"> Otto Brown | otto@ottobob.com | Linkedin: /otownb</p>
+    </footer>
+
+
   </body>
 </html>
