--- a/otto_brown/quotes.html
+++ b/otto_brown/quotes.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
-    <link rel="quoteStylesheet" type="text/css" href="assets/css/quotes.css">
     <title>Quotes</title>
     <title></title>
   </head>
   <body>
-    <h1 class="heading"><span class="heading-span">Quotes</span></h1>
-    <nav id="buttons">
-      <a class="links" href="index.html">Home</a><a class="links" href="about.html">About</a><a class="links" id="quotes" href="quotes.html">Quotes</a><a class="links" id="resume" href="Autumn_2017_Assembly_Schedule.pdf">Resumé</a>
-    </nav>
+    <header>
+      <h1 class="heading"><span class="heading-span">Quotes</span></h1>
+      <nav id="buttons">
+        <a class="links" href="index.html">Home</a><a class="links" href="about.html">About</a><a class="links" id="quotes" href="quotes.html">Quotes</a><a class="links" id="resume" href="Autumn_2017_Assembly_Schedule.pdf">Resumé</a>
+      </nav>
+    </header>
     <div id="quoteDescriptionDiv">
       <p id="quoteDescription">Everybody has days when they need a boost. Often times, people lose sight of what really matters, and they get caught up thinking about small, material things that, in the long run, aren't really important. I think it's really important that people don't sweat the small stuff, but rather look at matters from a distance on occasion.
         In order to center myself when doing that, I often read quotes that I've collected over time. Whenever I see something that I think is inspirational, I write it down so that I can find it when I need to refocus. Below, I've shared a few quotes that I've found to be extremely helpful, especially through High School.
@@ -85,7 +86,7 @@
     <footer>
       <p class="footerText" id="SJQuote">Your time is limited, so don't waste it living some else's life. Don't be trapped by dogma - which is living with the results of other people's thinking. Don't let the noise of others' opinions drown out your own inner voice. And most important, have the courage to follow your heart and intuition. —Steve Jobs</p>
       <hr></hr>
-      <p class="footerText"> Otto Brown | otto@ottobob.com | Linkedin: /otownb</p>
+      <p class="footerText"> Otto Brown | otto@ottobob.com | Linkedin: /in/otownb</p>
     </footer>
 
   </body>
