--- a/otto_brown/about.html
+++ b/otto_brown/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
-    <title>About</title>
+    <title>Otto Brown</title>
   </head>
   <body>
     <header>
@@ -24,10 +24,10 @@
 
     <footer>
       <p class="footerText" id="SJQuote">Your time is limited, so don't waste it living some else's life. Don't be trapped by dogma - which is living with the results of other people's thinking. Don't let the noise of others' opinions drown out your own inner voice. And most important, have the courage to follow your heart and intuition. —Steve Jobs</p>
-      <hr></hr>
       <p class="footerText"> Otto Brown | otto@ottobob.com | Linkedin: /in/otownb</p>
     </footer>
 
 
   </body>
+
 </html>
