--- a/otto_brown/about.html
+++ b/otto_brown/about.html
@@ -9,7 +9,7 @@
     <header>
       <h1 class="heading"><span class="heading-span">About</span></h1>
       <nav id="buttons">
-        <a class="links" href="index.html">Home</a><a class="links" href="about.html">About</a><a class="links" id="quotes" href="quotes.html">Quotes</a><a class="links" id="resume" href="Autumn_2017_Assembly_Schedule.pdf">Resumé</a>
+        <a class="links" href="index.html">Home</a><a class="links" href="about.html">About</a><a class="links" id="quotes" href="quotes.html">Quotes</a><a class="links" id="resume" href="Winter_2018_Assembly_Schedule.pdf">Resumé</a>
       </nav>
     </header>
 
@@ -17,13 +17,14 @@
         <img id="otto" src="assets/images/about/otto.jpg">
         <div class="bio">
           <p class="bio">
-            Welcome to my website!  <br>  —Ralph Waldo Emerson
-          </p>
+            I am a Junior at the University of Chicago Laboratory Schools in Chicago, Illinois with a passion for economics, computer science, and leadership. I am the president and founder of U-High's nationally-ranked Ethics Bowl team,
+            which competes with other Chicago-area sch
         </div>
     </div>
 
     <footer>
       <p class="footerText" id="SJQuote">Your time is limited, so don't waste it living some else's life. Don't be trapped by dogma - which is living with the results of other people's thinking. Don't let the noise of others' opinions drown out your own inner voice. And most important, have the courage to follow your heart and intuition. —Steve Jobs</p>
+      <hr></hr>
       <p class="footerText"> Otto Brown | otto@ottobob.com | Linkedin: /in/otownb</p>
     </footer>
 
