--- a/otto_brown/quotes.html
+++ b/otto_brown/quotes.html
@@ -28,11 +28,11 @@
         </div>
     </div>
 
-    <div class="quotePicRight">
-        <img id="confucius" class="picRight" src="assets/images/quotes/confucius.jpg">
+    <div id="angelou" class="quotePicRight">
+        <img  class="picRight" src="assets/images/quotes/angelou.jpg">
         <div class="textLeft">
           <p class="actualTextLeft">
-            “The superior man is modest in his speech but exceeds in his actions.” <br> –Confucius
+            “If you don't like something, change it. If you can't change it, change your attitude.” <br>  Maya Angelou
           </p>
         </div>
     </div>
@@ -73,11 +73,30 @@
         </div>
     </div>
 
-    <div id="bottome" class="quotePicLeft">
+    <div class="quotePicLeft">
         <img class="picLeft" src="assets/images/quotes/bottome.jpg">
         <div class="textRight">
-          <p class="actualTextRight">
+          <p id="bottome" class="actualTextRight">
             “There are two ways of meeting difficulties: you alter the difficulties, or you alter yourself to meet them.” <br>  –Phyllis Bottome
+          </p>
+        </div>
+    </div>
+
+
+    <div class="quotePicRight">
+        <img id="confucius" class="picRight" src="assets/images/quotes/confucius.jpg">
+        <div class="textLeft">
+          <p class="actualTextLeft">
+            “The superior man is modest in his speech but exceeds in his actions.” <br> –Confucius
+          </p>
+        </div>
+    </div>
+
+    <div class="quotePicLeft">
+        <img class="picLeft" src="assets/images/quotes/angelou.jpg">
+        <div class="textRight">
+          <p id="angelou2" class="actualTextRight">
+            "I've learned that people will forget what you said, people will forget what you did, but people will never forget how you made them feel." <br>  –Maya Angelou
           </p>
         </div>
     </div>
