--- a/otto_brown/index.html
+++ b/otto_brown/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+    <link rel="icon" type="image/png" href="assets/images/favicon.png">
     <title>Otto Brown</title>
   </head>
   <body>
     <header>
       <h1 class="heading"><span class="heading-span">Otto Brown</span></h1>
       <nav id="buttons">
-        <a class="links" href="index.html">Home</a><a class="links" href="about.html">About</a><a class="links" id="quotes" href="quotes.html">Quotes</a><a class="links" id="resume" href="Winter_2018_Assembly_Schedule.pdf">Resumé</a>
+        <a class="links" href="index.html">Home</a><a class="links" href="about.html">About</a><a class="links" id="quotes" href="quotes.html">Quotes</a><a class="links" id="resume" href="Winter_2018_Assembly_Schedule.pdf" target="_blank">Resumé</a>
       </nav>
     </header>
 
