--- a/otto_brown/about.html
+++ b/otto_brown/about.html
@@ -9,7 +9,7 @@
     <header>
       <h1 class="heading"><span class="heading-span">About</span></h1>
       <nav id="buttons">
-        <a class="links" href="index.html">Home</a><a class="links" href="about.html">About</a><a class="links" id="quotes" href="quotes.html">Quotes</a><a class="links" id="resume" href="Winter_2018_Assembly_Schedule.pdf">Resumé</a>
+        <a class="links" href="index.html">Home</a><a class="links" href="about.html">About</a><a class="links" id="quotes" href="quotes.html">Quotes</a><a class="links" id="resume" href="Winter_2018_Assembly_Schedule.pdf" target="_blank">Resumé</a>
       </nav>
     </header>
 
