--- a/otto_brown/quotes.html
+++ b/otto_brown/quotes.html
@@ -31,17 +31,17 @@
 
     <div id="angelou" class="quotePicRight">
         <img  class="picRight" src="assets/images/quotes/angelou.jpg">
-        <div class="textLeft">
+        <div id="anglouText" class="textLeft">
           <p class="actualTextLeft">
             “If you don't like something, change it. If you can't change it, change your attitude.” <br>  Maya Angelou
           </p>
         </div>
     </div>
 
-    <div id="copernicus" class="quotePicLeft">
+    <div class="quotePicLeft">
         <img class="picLeft" src="assets/images/quotes/copernicus.jpg">
         <div class="textRight">
-          <p class="actualTextRight">
+          <p id="copernicus" class="actualTextRight">
             “To know that we know what we know, and to know that we do not know what we do not know, that is true knowledge.” <br>  –Copernicus
           </p>
         </div>
@@ -76,7 +76,7 @@
 
     <div class="quotePicLeft">
         <img class="picLeft" src="assets/images/quotes/bottome.jpg">
-        <div class="textRight">
+        <div id="bottomeText" class="textRight">
           <p id="bottome" class="actualTextRight">
             “There are two ways of meeting difficulties: you alter the difficulties, or you alter yourself to meet them.” <br>  –Phyllis Bottome
           </p>
@@ -95,7 +95,7 @@
 
     <div class="quotePicLeft">
         <img class="picLeft" src="assets/images/quotes/angelou.jpg">
-        <div class="textRight">
+        <div id="anglouText" class="textRight">
           <p id="angelou2" class="actualTextRight">
             "I've learned that people will forget what you said, people will forget what you did, but people will never forget how you made them feel." <br>  –Maya Angelou
           </p>
