Feb 27 at 11:30 am

--- a/otto_brown/index.html
+++ b/otto_brown/index.html
@@ -17,7 +17,7 @@
     <picture><img alt="CoverPhoto" src="ottoInBagan.jpg"></picture>
 
     <footer>
-      <p class="footerText" id="SJQuote">Your time is limited, so don't waste it living some else's life. Don't be trapped by dogma - which is living with the results of other people's thinking. Don't let the noise of others' opinions drown out your own inner voice. And most important, have the courage to follow your heart and intuition. —Steve Jobs</p>
+      <p class="footerText" id="SJQuote">Your time is limited, so don't waste it living some else's life. Don't be trapped by dogma - which is living with the results of other people's thinking. Don't let the noise of others' opinions drown out your own inner voice. And most important, have the courage to follow your heart and intuition. <br> —Steve Jobs</p>
       <hr></hr>
       <p class="footerText"> Otto Brown | otto@ottobob.com | Linkedin: /in/otownb</p>
     </footer>
