add dash for Maya Angelou

--- a/otto_brown/quotes.html
+++ b/otto_brown/quotes.html
@@ -33,7 +33,7 @@
         <img  class="picRight" src="assets/images/quotes/angelou.jpg">
         <div id="anglouText" class="textLeft">
           <p class="actualTextLeft">
-            “If you don't like something, change it. If you can't change it, change your attitude.” <br>  Maya Angelou
+            “If you don't like something, change it. If you can't change it, change your attitude.” <br>  –Maya Angelou
           </p>
         </div>
     </div>
