--- a/quotes.html
+++ b/quotes.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
-    <title>Otto Brown</title>
+    <link rel="icon" type="image/png" href="assets/images/favicon.png">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,500|Raleway:300" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -14,8 +15,8 @@
     </header>
     <div id="quoteDescriptionDiv">
       <p id="quoteDescription">Everybody has days when they need a boost. Often times, people lose sight of what really matters, and they get caught up thinking about small, material things that, in the long run, aren't really important. I think it's really important that people don't sweat the small stuff, but rather look at matters from a distance on occasion.
-        In order to center myself when doing that, I often read quotes that I've collected over time. Whenever I see something that I think is inspirational, I write it down so that I can find it when I need to refocus. Below, I've shared a few quotes that I've found to be extremely helpful, especially through High School.
-        The beauty of quotes is that you can make whatever you want of them, so your interpretation might be totally different from mine. Regardless, read on, and I hope you find yourself refocused and energy to inspire yourself and others. <br><br>
+        In order to center myself when doing that, I often read quotes that I've collected over time. Whenever I see something that I think is inspirational, I write it down so that I can find it when I need to refocus. Below, I've shared a few quotes that I've found to be extremely helpful, especially throughout High School.
+        The beauty of quotes is that you can make whatever you want of them, so your interpretation might be totally different from mine. Regardless, read on, and I hope you find yourself refocused and full of energy to inspire yourself and others. <br><br>
         In addition to quotes, poetry can be another way to recenter yourself and remind yourself of what's important. To read an anthology of poems that I put together, click <a id="anthology" href="assets/documents/anthology.pdf" target="_blank">here</a>.
       </p>
     </div>
