--- a/about.html
+++ b/about.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+    <link rel="icon" type="image/png" href="assets/images/favicon.png">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,500|Raleway:300" rel="stylesheet">
     <title>Otto Brown</title>
   </head>
   <body>
