--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
     </div>
 
     <footer>
-      <p class="footerText" id="SJQuote">Your time is limited, so don't waste it living some else's life. Don't be trapped by dogma - which is living with the results of other people's thinking. Don't let the noise of others' opinions drown out your own inner voice. And most important, have the courage to follow your heart and intuition.<br> —Steve Jobs</p>
+      <p class="footerText" id="SJQuote">Your time is limited, so don’t waste it living someone else’s life. Don’t be trapped by dogma — which is living with the results of other people’s thinking. Don’t let the noise of others’ opinions drown out your own inner voice. And most important, have the courage to follow your heart and intuition. They somehow already know what you truly want to become. Everything else is secondary.<br> —Steve Jobs</p>
       <hr></hr>
       <p class="footerText"> Otto Brown | otto@ottobob.com | Linkedin: /in/otownb</p>
     </footer>
